#144 feat : 카트 리스트 계산 수정 및 검색페이지에서 카트 추가 기능 추가